tests/files/lexer_tests/should_fail/039.cmdr
// Illegal character in variable name (ascii 6)
myvar = 6;